kubernetes/echoserver/echoserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver1

  annotations:
    # cert-manager.io/issuer: "letsencrypt-prod"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    alb.ingress.kubernetes.io/scheme: internet-facing
    # cert-manager.io/issue-reason: reconcile
    
    alb.ingress.kubernetes.io/subnets: subnet-0a05f4242593edbc1, subnet-07ca0f6a43e76b7ba
    external-dns.alpha.kubernetes.io/hostname: ahmad1234.ahmadkaleem2.link
    # external-dns.alpha.kubernetes.io/hostname: test.ahmadkaleem2.link
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    service.beta.kubernetes.io/aws-load-balancer-type: alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    kubernetes.io/ingress.class: alb

    # external-dns.alpha.kubernetes.io/hostname: my-app.test-dns.com
spec:
  ingressClassName: alb
  tls:
  - hosts:
    # - test.ahmadkaleem2.link
    - ahmad1234.ahmadkaleem2.link
    secretName: letsencrypt-prod-ingress-certificates1
  rules:
    - host: ahmad1234.ahmadkaleem2.link
    # - host: test.ahmadkaleem2.link
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echoserver
                port:
                  number: 80
